LS - Aggiornamento Portale

--- a/PortaleGeo/Views/Shared/Popup.cshtml
+++ b/PortaleGeo/Views/Shared/Popup.cshtml
@@ -1,10 +1,18 @@
 ﻿<!-- Model Content-->
-
+<body>
 <div class="modal-content" style="width:400px;height:200px">
     <div class="modal-body">
         <p>Loading</p>
         <div class="progress" style="height:50px">
             <div class="progress-bar progress-bar-striped active progress-bar" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+        <div class="container">
+            <div class="alert alert-info">
+                <a class="btn-close" data-dismiss="alert"><i class="fa fa-closed-captioning"></i></a>
+                <strong>Attenzione se concludi prima della fine del processo il risultato della geoferenzazione fatta sarà perso</strong>
+            </div>
+        </div>
     </div>
 </div>
+
+</body>
