--- a/PortaleGeo/Views/Shared/Popup.cshtml
+++ b/PortaleGeo/Views/Shared/Popup.cshtml
@@ -8,11 +8,15 @@
         </div>
         <div class="container">
             <div class="alert alert-info">
-                <a class="btn-close" data-dismiss="alert"><i class="fa fa-closed-captioning"></i></a>
+                <button type="submit" class="btn-close" data-dismiss="alert" id="alert" ></button>
                 <strong>Attenzione se concludi prima della fine del processo il risultato della geoferenzazione fatta sarà perso</strong>
             </div>
         </div>
     </div>
 </div>
-
+<style>
+    #alert{
+        background-color:red
+    }
+</style>
 </body>
